QPID-3206: added special cases to catch negative numeric string conversions to unsigned values

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1092219 13f79535-47bb-0310-9956-ffa450edef68